--- a/spec/cassettes/cassette3.yml
+++ b/spec/cassettes/cassette3.yml
@@ -21,7 +21,7 @@
       x-runtime: 
       - "0.070428"
       date: 
-      - Fri, 25 Feb 2011 06:37:15 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
