--- a/spec/cassettes/cassette6.yml
+++ b/spec/cassettes/cassette6.yml
@@ -19,7 +19,7 @@
       x-runtime: 
       - "0.211912"
       date: 
-      - Fri, 25 Feb 2011 06:37:34 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
@@ -52,7 +52,7 @@
       x-runtime: 
       - "0.049632"
       date: 
-      - Fri, 25 Feb 2011 06:37:36 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
