--- a/spec/cassettes/task/archived1.yml
+++ b/spec/cassettes/task/archived1.yml
@@ -19,7 +19,7 @@
       x-runtime: 
       - "0.151151"
       date: 
-      - Fri, 25 Feb 2011 06:41:05 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
@@ -52,7 +52,7 @@
       x-runtime: 
       - "0.057650"
       date: 
-      - Fri, 25 Feb 2011 06:41:08 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
@@ -85,7 +85,7 @@
       x-runtime: 
       - "0.448892"
       date: 
-      - Fri, 25 Feb 2011 06:41:11 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
