--- a/spec/cassettes/task/find.yml
+++ b/spec/cassettes/task/find.yml
@@ -19,7 +19,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:41:55 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.266290"
       status: 
@@ -50,7 +50,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:41:58 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.022301"
       status: 
@@ -83,7 +83,7 @@
       x-runtime: 
       - "0.060737"
       date: 
-      - Fri, 25 Feb 2011 06:42:01 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
