--- a/spec/cassettes/task/move_to_next_column.yml
+++ b/spec/cassettes/task/move_to_next_column.yml
@@ -19,7 +19,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:37:40 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.269405"
       status: 
@@ -52,7 +52,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:37:43 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.125737"
       status: 
@@ -85,7 +85,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:37:46 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.266851"
       status: 
@@ -118,7 +118,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:37:48 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.055616"
       status: 
@@ -149,7 +149,7 @@
       x-runtime: 
       - "0.009284"
       date: 
-      - Fri, 25 Feb 2011 06:37:51 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
