--- a/spec/cassettes/task/move_to_previous_column.yml
+++ b/spec/cassettes/task/move_to_previous_column.yml
@@ -19,7 +19,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:37:54 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.187801"
       status: 
@@ -52,7 +52,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:37:58 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.268056"
       status: 
@@ -85,7 +85,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:38:00 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.056488"
       status: 
@@ -118,7 +118,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:38:04 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.248191"
       status: 
@@ -151,7 +151,7 @@
       server: 
       - nginx/0.8.53
       date: 
-      - Fri, 25 Feb 2011 06:38:07 GMT
+      - <%= Time.now.utc %>
       x-runtime: 
       - "0.054432"
       status: 
@@ -182,7 +182,7 @@
       x-runtime: 
       - "0.006377"
       date: 
-      - Fri, 25 Feb 2011 06:38:11 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
