--- a/spec/cassettes/task/owner.yml
+++ b/spec/cassettes/task/owner.yml
@@ -21,7 +21,7 @@
       x-runtime: 
       - "0.094231"
       date: 
-      - Fri, 25 Feb 2011 06:40:56 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
@@ -52,7 +52,7 @@
       x-runtime: 
       - "0.365952"
       date: 
-      - Fri, 25 Feb 2011 06:41:00 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
@@ -85,7 +85,7 @@
       x-runtime: 
       - "0.098148"
       date: 
-      - Fri, 25 Feb 2011 06:41:02 GMT
+      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
       cache-control: 
